--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ attrs==25.1.0
 cffi==1.17.1
 contourpy==1.1.1
 cycler==0.12.1
+empy==3.3.4
 filelock==3.16.1
 flatbuffers==25.2.10
 fonttools==4.56.0
@@ -41,6 +42,7 @@ pycparser==2.22
 pyparsing==3.1.4
 pyrealsense2==2.55.1.6486
 python-dateutil==2.9.0.post0
+pyyaml==6.0.2
 scipy==1.10.1
 six==1.17.0
 sounddevice==0.5.1
