--- a/ros_ws/src/simulator/CMakeLists.txt
+++ b/ros_ws/src/simulator/CMakeLists.txt
@@ -16,7 +16,7 @@ find_package(catkin REQUIRED)
 ## Uncomment this if the package has a setup.py. This macro ensures
 ## modules and global scripts declared therein get installed
 ## See http://ros.org/doc/api/catkin/html/user_guide/setup_dot_py.html
-# catkin_python_setup()
+catkin_python_setup()
 
 ################################################
 ## Declare ROS messages, services and actions ##
@@ -157,7 +157,6 @@ include_directories(
 # in contrast to setup.py, you can choose the destination
 catkin_install_python(PROGRAMS
   scripts/main.py
-  lib/util.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
