--- a/ik/src/g1_moveit_config/config/fake_controllers.yaml
+++ b/ik/src/g1_moveit_config/config/fake_controllers.yaml
@@ -7,6 +7,8 @@ controller_list:
       - right_shoulder_yaw_joint
       - right_elbow_joint
       - right_wrist_roll_joint
+      - right_wrist_pitch_joint
+      - right_wrist_yaw_joint
   - name: fake_left_arm_controller
     type: $(arg fake_execution_type)
     joints:
@@ -15,8 +17,10 @@ controller_list:
       - left_shoulder_yaw_joint
       - left_elbow_joint
       - left_wrist_roll_joint
+      - left_wrist_pitch_joint
+      - left_wrist_yaw_joint
 initial:  # Define initial robot poses per group
-#  - group: right_arm
-#    pose: home
-
-  []
+  - group: right_arm
+    pose: home
+  - group: left_arm
+    pose: home
