--- a/ik/src/g1_moveit_config/config/ros_controllers.yaml
+++ b/ik/src/g1_moveit_config/config/ros_controllers.yaml
@@ -6,6 +6,8 @@ right_arm_controller:
     - right_shoulder_yaw_joint
     - right_elbow_joint
     - right_wrist_roll_joint
+    - right_wrist_pitch_joint
+    - right_wrist_yaw_joint
   gains:
     right_shoulder_pitch_joint:
       p: 100
@@ -32,6 +34,16 @@ right_arm_controller:
       d: 1
       i: 1
       i_clamp: 1
+    right_wrist_pitch_joint:
+      p: 100
+      d: 1
+      i: 1
+      i_clamp: 1
+    right_wrist_yaw_joint:
+      p: 100
+      d: 1
+      i: 1
+      i_clamp: 1
 left_arm_controller:
   type: position_controllers/JointTrajectoryController
   joints:
@@ -40,6 +52,8 @@ left_arm_controller:
     - left_shoulder_yaw_joint
     - left_elbow_joint
     - left_wrist_roll_joint
+    - left_wrist_pitch_joint
+    - left_wrist_yaw_joint
   gains:
     left_shoulder_pitch_joint:
       p: 100
@@ -62,6 +76,16 @@ left_arm_controller:
       i: 1
       i_clamp: 1
     left_wrist_roll_joint:
+      p: 100
+      d: 1
+      i: 1
+      i_clamp: 1
+    left_wrist_pitch_joint:
+      p: 100
+      d: 1
+      i: 1
+      i_clamp: 1
+    left_wrist_yaw_joint:
       p: 100
       d: 1
       i: 1
