--- a/ros_ws/src/kinematics/package.xml
+++ b/ros_ws/src/kinematics/package.xml
@@ -55,6 +55,13 @@
   <exec_depend>rospy</exec_depend>
   <exec_depend>kin_util</exec_depend>
 
+<build_depend>rospy</build_depend>
+<build_depend>std_msgs</build_depend>
+<build_depend>custom_msg</build_depend>
+<exec_depend>rospy</exec_depend>
+<exec_depend>std_msgs</exec_depend>
+
+
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- Other tools can request additional information be placed here -->
