add scaled.py as a ROS script

--- a/ros_ws/src/graph_points/CMakeLists.txt
+++ b/ros_ws/src/graph_points/CMakeLists.txt
@@ -159,6 +159,7 @@ catkin_install_python(PROGRAMS
   scripts/main.py
   scripts/preprocessed.py
   scripts/raw.py
+  scripts/scaled.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
